tests/agl/rejections/type/is_wrong_variant.agl
enum R
  | Pass
enum Q
  | Other
let r: R = Pass
let b = r is Other
